force-app/main/default/objects/vlocity_ins__FeeScheduleColumnConfiguration__mdt/fields/vlocity_ins__ColumnMappingType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ColumnMappingType__c</fullName>
    <description>This is to map columns to specific Fee Schedule field types such as Procedure Code, Facility Price and Non-Facility Price.  The Other type will represent all other columns.</description>
    <label>Column Mapping Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procedure Code</fullName>
            </value>
            <value>
                <fullName>Facility Price</fullName>
            </value>
            <value>
                <fullName>Non-Facility Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>