force-app/main/default/objects/vlocity_ins__FeeScheduleColumnConfiguration__mdt/fields/vlocity_ins__ColumnType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ColumnType__c</fullName>
    <label>Column Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>