force-app/main/default/objects/vlocity_ins__FeeScheduleColumnConfiguration__mdt/fields/vlocity_ins__IsColumnActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsColumnActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this column is currently active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>